--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,12 @@ os: linux
 files:
   - source: /
     destination: /opt/test/
+
+  #ApplicationStop:
+  #  - location: scripts/appStop.sh
+  #AfterInstall:
+  #  - location: scripts/afterInstall.sh
+  ApplicationStart:
+    - location: scripts/appStart.sh
+  #ValidateService:
+  #  - location: scripts/appStatus.sh
