--- a/appspec.yml
+++ b/appspec.yml
@@ -4,5 +4,11 @@ files:
   - source: /
     destination: /opt/test
 hooks:
+  ApplicationStop:
+    - location: scripts/appStop.sh
+  AfterInstall:
+    - location: scripts/afterInstall.sh
   ApplicationStart:
     - location: scripts/appStart.sh
+  ValidateService:
+    - location: scripts/appStatus.sh
