--- a/appspec.yml
+++ b/appspec.yml
@@ -10,3 +10,5 @@ hooks:
     - location: scripts/afterInstall.sh
   ApplicationStart:
     - location: scripts/appStart.sh
+   ValidateService:
+    - location: scripts/appStatus.sh
